HTBHF-896 Added missing INELIGIBLE status mapping. Added index to claim_status.