@@ -1,6 +1,5 @@
 package uk.gov.dhsc.htbhf.claimant.service;
 
-import com.google.common.collect.ImmutableMap;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -22,12 +21,13 @@ public class ClaimService {
     private final EligibilityClient client;
     private final EligibilityStatusCalculator eligibilityStatusCalculator;
 
-    private final Map<EligibilityStatus, ClaimStatus> eligibilityStatusMapper = ImmutableMap.of(
+    private static final Map<EligibilityStatus, ClaimStatus> STATUS_MAP = Map.of(
             EligibilityStatus.ELIGIBLE, ClaimStatus.NEW,
             EligibilityStatus.PENDING, ClaimStatus.PENDING,
             EligibilityStatus.NO_MATCH, ClaimStatus.REJECTED,
             EligibilityStatus.ERROR, ClaimStatus.ERROR,
-            EligibilityStatus.DUPLICATE, ClaimStatus.REJECTED
+            EligibilityStatus.DUPLICATE, ClaimStatus.REJECTED,
+            EligibilityStatus.INELIGIBLE, ClaimStatus.REJECTED
     );
 
     @SuppressWarnings("PMD.AvoidCatchingGenericException")
@@ -36,7 +36,7 @@ public class ClaimService {
 
         try {
             EligibilityStatus eligibilityStatus = determineEligibilityStatus(claimant);
-            ClaimStatus claimStatus = eligibilityStatusMapper.get(eligibilityStatus);
+            ClaimStatus claimStatus = STATUS_MAP.get(eligibilityStatus);
             saveClaimant(claimant, claimStatus, eligibilityStatus);
             return claimant;
         } catch (RuntimeException e) {
